--- a/Multi Module Project/build.gradle
+++ b/Multi Module Project/build.gradle
@@ -14,6 +14,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile "org.springframework:spring-webmvc:4.1.6.RELEASE"
     compile 'javax.servlet:jstl:1.2'
-    compile project(":service")
-    compile project(":models")
+    compile project(":service-module")
+    compile project(":model-module")
 }
