--- a/Multi Module Project/build.gradle
+++ b/Multi Module Project/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile "org.springframework:spring-webmvc:4.1.6.RELEASE"
     compile 'javax.servlet:jstl:1.2'
+    compile 'javax.servlet:javax.servlet-api:3.0.1'
     compile project(":service-module")
     compile project(":model-module")
 }
