--- a/Multi Module Project/build.gradle
+++ b/Multi Module Project/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile "org.springframework:spring-webmvc:4.1.6.RELEASE"
     compile 'javax.servlet:jstl:1.2'
     compile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile 'org.springframework.security:spring-security-config:3.2.0.RELEASE'
     compile project(":service-module")
     compile project(":model-module")
 }
